tests/invalid/Type_Invalid_1.whiley
type nat is (int x) where g(x)

method g(int x) -> int:
    return x
